--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -15,4 +15,10 @@
         height: 50px;
         font-size: 16px;
     }
+    &_submit {
+        width: 100%;
+        background-color: #C70101;
+        height: 55px;
+        font-size: 16px;
+    }
 }
