--- a/src/sass/blocks/_titles.scss
+++ b/src/sass/blocks/_titles.scss
@@ -5,4 +5,10 @@
     text-align: center;
     font-weight: 700;
     text-transform: uppercase;
+    &_left {
+        font-size: 36px;
+        color: #fff;
+        line-height: 1.2;
+        text-align: left;
+    }
 }
