--- a/src/sass/media.scss
+++ b/src/sass/media.scss
@@ -1,3 +1,16 @@
+@media screen and (max-width: 950px) {
+    .consultation .title {
+        text-align: center;
+        }
+    .consultation__descr {
+        text-align: center;
+    }
+    .feed-form {
+        margin: 15px auto;
+    }
+}
+
+
 @media screen and (max-width: 595px)  {
     .promo .header {
         flex-direction: column;
