--- a/src/sass/media.scss
+++ b/src/sass/media.scss
@@ -1,20 +1,24 @@
 @media screen and (max-width: 950px) {
     .consultation .title {
         text-align: center;
-        }
+    }
+
     .consultation__descr {
         text-align: center;
     }
+
     .feed-form {
         margin: 15px auto;
     }
+
     .carousel {
         img {
             width: 70%;
             margin: 0 auto;
         }
     }
-    .slick-dots {
+
+    .carousel__inner .slick-dots {
         display: flex;
         justify-content: center;
         list-style-type: none;
@@ -27,36 +31,83 @@
             font-size: 24px;
             text-align: center;
         }
+
         &__tabs {
             flex-direction: column;
             align-items: center;
         }
     }
+
+    .footer .footer__info-media {
+        width: 320px;
+        height: 188px;
+    }
+
+    .footer .footer__info .footer__addr {
+        font-size: 16px;
+        margin-bottom: 12px;
+    }
+
+    .footer .footer__info .footer__phone {
+        font-size: 16px;
+        margin-bottom: 12px;
+    }
+
+    .footer .footer__info .footer__social-item {
+        width: 38px;
+        height: 38px;
+    }
 }
 
 
-@media screen and (max-width: 595px)  {
+
+@media screen and (max-width: 595px) {
     .promo .header {
         flex-direction: column;
     }
+
     .promo__wrapper {
         align-items: center;
     }
+
     .promo__header {
         text-align: center;
     }
+
     .promo__subheader {
         text-align: center;
+    }
+
+    .feed {
+        &__item {
+            flex-direction: column;
+            align-items: center;
+        }
+
+        &__img {
+            display: block;
+            margin-left: 60px;
+        }
+
+        &__subtitle,
+        &__count,
+        &__descr {
+            text-align: center;
+            padding-right: 25px;
+            padding-left: 25px;
+        }
     }
 }
 
 @media screen and (max-width: 424px) {
     .promo__icons {
         flex-direction: column;
-        align-items:center;
+        align-items: center;
     }
+
     .advantages__wrapper {
         flex-direction: column;
-        align-items:center;
+        align-items: center;
     }
+
 }
