--- a/src/sass/media.scss
+++ b/src/sass/media.scss
@@ -97,6 +97,10 @@
             padding-left: 25px;
         }
     }
+
+    .overlay .modal .modal__close {
+        right: 0;
+    }
 }
 
 @media screen and (max-width: 424px) {
