--- a/src/sass/blocks/_advantages.scss
+++ b/src/sass/blocks/_advantages.scss
@@ -1,23 +1,27 @@
 .advantages {
     padding: 70px 0 69px 0;
     background-color: #f6f6f6;
+
     &__wrapper {
         display: flex;
         justify-content: space-between;
         margin-top: 65px;
     }
+
     &__item {
         display: flex;
         flex-direction: column;
         align-items: center;
         max-width: 238px;
     }
-    &_subtitle {
+
+    &__subtitle {
         margin-top: 38px;
         font-size: 18px;
         color: #0d0d0d;
         font-weight: 700;
     }
+
     &__descr {
         margin-top: 26px;
         font-size: 14px;
@@ -25,11 +29,20 @@
         line-height: 1.2;
         text-align: center;
         font-weight: 300;
+
         a {
             color: #ff0000;
             text-decoration: underline;
         }
-}
-}
+    }
 
+    &__icon {
+        &_animated {
+            animation-name: heartbeat;
+            animation-duration: 1.5s;
+            animation-timing-function: ease;
+            animation-iteration-count: infinite;
+        }
+    }
 
+}
