--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,3 +1,4 @@
+@use 'base/animations';
 @use 'blocks/promo';
 @use 'blocks/header';
 @use 'blocks/buttons';
@@ -13,6 +14,7 @@
 @use 'blocks/footer';
 @use 'blocks/modal';
 @use 'blocks/pageup';
+
 
 
 * {
